# robosmith

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/agents/: index.html
api/config/: index.html
api/environments/: index.html
api/stages/: index.html
api/trainers/: index.html
configs/: env_registry.yaml  robosmith.example.yaml
contributing/: index.html
docs/: contributing.md  index.md
docs/api/: agents.md  config.md  environments.md  stages.md  trainers.md
docs/extending/: agents.md  environments.md  trainers.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/pipeline/: delivery.md  env-synthesis.md  evaluation.md  intake.md  overview.md  reward-design.md  scout.md  training.md
extending/agents/: index.html
extending/environments/: index.html
extending/trainers/: index.html
forge/: __init__.py  cli.py  config.py  controller.py
forge/agents/: __init__.py  base.py  reward_agent.py
forge/envs/: __init__.py  registry.py  reward_wrapper.py  wrapper.py
forge/stages/: __init__.py  delivery.py  env_synthesis.py  evaluation.py  reward_design.py  training.py
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
pipeline/delivery/: index.html
pipeline/env-synthesis/: index.html
pipeline/evaluation/: index.html
pipeline/intake/: index.html
pipeline/overview/: index.html
pipeline/reward-design/: index.html
pipeline/scout/: index.html
pipeline/training/: index.html
robosmith/: __init__.py  _logging.py  cli.py  config.py  controller.py  env_loader.py  utils.py
robosmith-docs/: README.md  astro.config.mjs  package-lock.json  package.json
robosmith-docs/src/content/docs/: index.mdx
robosmith-docs/src/content/docs/extending/: environments.md  trainers.md
robosmith-docs/src/content/docs/guides/: installation.md  quickstart.md  why-robosmith.md
robosmith-docs/src/content/docs/reference/: architecture.md  cli.md  configuration.md  python-api.md
robosmith-docs/src/content/docs/systems/: environments.md  reward-design.md  training-backends.md
robosmith-docs/src/content/docs/workflows/: integration-tooling.md  runs.md  training-pipeline.md
robosmith-docs/src/styles/: custom.css
robosmith/agent/: __init__.py  llm.py  state.py  tools.py
robosmith/agent/graphs/: __init__.py  auto_integrate.py  run.py
robosmith/agent/graphs/run/: __init__.py  delivery.py  design.py  inspect.py  intake.py  pipeline.py  scout.py  synthesis.py  train.py
robosmith/agent/graphs/run/misc/: checkpoint.py  conditions.py
robosmith/agent/models/: __init__.py  base.py  decision_agent.py  reward_agent.py
robosmith/agent/models/decision/: __init__.py  agent.py  prompt.py
robosmith/agent/models/reward/: __init__.py  agent.py  prompt.py  types.py
robosmith/agents/: __init__.py  base.py  decision_agent.py  reward_agent.py
robosmith/cmd/: __init__.py  robosmith_cli.py
robosmith/cmd/cli/: __init__.py  auto.py  diag.py  gen.py  inspect.py  runs.py
robosmith/diagnostics/: __init__.py  diag_cli.py  diag_models.py  trajectory_analyzer.py  trajectory_reader.py
robosmith/envs/: __init__.py  adapter_registry.py  registry.py  reward_wrapper.py  wrapper.py
robosmith/envs/adapters/: __init__.py  custom_mjcf_adapter.py  gymnasium_adapter.py  isaac_lab_adapter.py  libero_adapter.py  maniskill_adapter.py
robosmith/generators/: __init__.py  gen_cli.py  gen_wrapper.py
robosmith/inspect/: __init__.py  cli.py  compat.py  dispatch.py  formatter.py  models.py  registry.py
robosmith/inspect/inspectors/: __init__.py  gymnasium_env.py  lerobot.py  lerobot_policy.py
robosmith/stages/: __init__.py  delivery.py  env_synthesis.py  evaluation.py  intake.py  reward_design.py  scout.py  training.py
robosmith/stages/delivery/: __init__.py  report.py  run.py  video.py
robosmith/stages/env_synthesis/: __init__.py  synthesis.py
robosmith/stages/evaluation/: __init__.py  run.py  utils.py
robosmith/stages/intake/: __init__.py  parsing.py  prompt.py
robosmith/stages/reward_design/: __init__.py  analysis.py  reward_design.py  utils.py
robosmith/stages/scout/: __init__.py  arxiv.py  caching.py  search.py  utils.py
robosmith/stages/training/: __init__.py  select.py  train.py
robosmith/trainers/: base.py  cleanrl_trainer.py  il_trainer.py  offline_rl_trainer.py  registry.py  rl_games_trainer.py  sb3_trainer.py  selector.py
search/: search_index.json
tests/: conftest.py  test_agent.py  test_agent_base.py  test_config.py  test_controller.py  test_delivery.py  test_diag.py  test_env_synthesis.py  test_evaluation.py  test_gen.py  test_inspect.py  test_intake.py  test_registry.py  test_reward_agent.py  test_reward_design.py  test_scout.py  test_synthesis.py  test_training.py  test_wrapper.py
